visualizer/css/info.css
#info h3 {
  margin: 0 0 0.5em 0;
}

/* Remove bullet & indent. */
#info ul {
  list-style: none;
  padding: 0;
  margin: 0 0 0 1em;
}

#info li {
  margin-bottom: 0.5em;
  overflow-wrap: break-word;
}

#info li:last-child {
  margin-bottom: 1em;
}

#info .title {
  display: block;
  font-weight: bold;
  margin-bottom: 0.1em;
}

#info .value {
  display: block;
}

